--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
       <button onclick="sort()">Sorting</button>
       <span id="error" style="font-size: 18px"></span>
     </div>
-    <section>
-      <div id="operation" class="operation"></div>
+    <section id="operation" class="operation">
     </section>
   </body>
   <script src="app.js"></script>
