changing the input placeholder name to enter numbers0

--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
-    
   </head>
   <body>
     <div class="container">
-      <div> BINARY SEARCH</div>
+      <div>BINARY SEARCH</div>
       <label for="Binary_search">Enter the Elements</label>
-      <input type="text" id="number" placeholder="Numbers to be sort" />
+      <input type="text" id="number" placeholder="Enter numbers" />
       <label for="">Key</label>
       <input
         type="number"
@@ -19,13 +18,11 @@
         placeholder="Which number you want to search"
       />
       <button onclick="search()">Searching</button>
-      <span id="error" style="font-size: 18px"></span>
-
+      <span id="error"></span>
     </div>
     <div class="container_operation">
-         <div id="operation" class="operation">
+      <div id="operation" class="operation"></div>
     </div>
-  </div>
   </body>
   <script src="app.js"></script>
 </html>
