change the bineary search algorithm

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         id="key"
         placeholder="Which number you want to search"
       />
-      <button onclick="search()">Searching</button>
+      <button id="btn">Searching</button>
       <span id="error"></span>
     </div>
     <div class="container_operation">
